# python_io_parallel_processing_article

./: README.md  article.md
io-processing/: pyproject.toml
io-processing/io_processing/: task.py  timeit.py
io-processing/io_processing/code_blocks/: 1.py  2.py  3.py  4.py  5.py  6.py
